--- a/ios/jdclone/Info.plist
+++ b/ios/jdclone/Info.plist
@@ -70,6 +70,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>ProximaNova-Light.ttf</string>
+		<string>ProximaNova-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
